--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     ],
     "no-shadow": "off",
     "no-unused-vars": "off",
-    "react/destructuring-assignment": "off"
+    "react/destructuring-assignment": "off",
+    "react/no-array-index-key": "off"
   }
 }
